# x2p

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/x2p-agent-server/: Cargo.toml
crates/x2p-agent-server/src/: main.rs
crates/x2p-cli/: Cargo.toml
crates/x2p-cli/src/: capture.rs  main.rs  render.rs
crates/x2p-core/: Cargo.toml
crates/x2p-core/src/: error.rs  lib.rs  model.rs  prune.rs  render.rs  tokens.rs
crates/x2p-core/src/model/: bundle.rs  ids.rs  mod.rs  node.rs  relationship.rs
crates/x2p-plugin-host/: Cargo.toml
crates/x2p-plugin-host/src/: lib.rs
crates/x2p-storage/: Cargo.toml
crates/x2p-storage/src/: lib.rs
crates/x2p-test-utils/: Cargo.toml
crates/x2p-test-utils/src/: lib.rs
crates/x2p-tokenizers/: Cargo.toml
crates/x2p-tokenizers/src/: lib.rs
crates/x2p-web-adapter-host/: Cargo.toml
crates/x2p-web-adapter-host/src/: main.rs
crates/x2p-wire/: Cargo.toml
crates/x2p-wire/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
