[workspace]
resolver = "2"
members = [
    "crates/x2p-core",
    "crates/x2p-cli",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.78"
license       = "Apache-2.0"
repository    = "https://github.com/x2p-platform/x2p"
authors       = ["x2p platform contributors"]
publish       = false

[workspace.lints.rust]
unsafe_code      = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.dev]
debug = 1
