[package]
name          = "x2p-cli"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[lints]
workspace = true

[[bin]]
name = "x2p"
path = "src/main.rs"

[dependencies]
x2p-core    = { path = "../x2p-core" }
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
scraper     = "0.20"
serde_json  = "1"
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
