[package]
name = "x2p-core"
description = "Pure-library core for x2p: Context_Model, Prompt_Engine, Compressor, Redactor, and the plugin contract."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
thiserror = "2"
semver = { version = "1", features = ["serde"] }

# Context_Model schema (task 3)
ulid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["preserve_order"] }
hex = "0.4"

[dev-dependencies]
