[package]
name          = "x2p-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tiktoken-rs = "0.5"
