[package]
name        = "x2p-plugin-host"
description = "Plugin contract surface for x2p. Phase 1 ships the trait and manifest types only; the WASM/subprocess host is a Phase 2 deliverable (see design.md § Roadmap)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
publish       = { workspace = true }

[lints]
workspace = true

[dependencies]
