[package]
name        = "x2p-storage"
description = "BLAKE3 content-addressed cache plus sled index and the audit-log hash chain."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
publish       = { workspace = true }

[lints]
workspace = true

[dependencies]
