[package]
name        = "x2p-tokenizers"
description = "cl100k / o200k / llama tokenizer implementations behind the x2p-core Tokenizer trait."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
publish       = { workspace = true }

[lints]
workspace = true

[dependencies]
